<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.home.RealHomeActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/frame_layout"
        />
    <com.cuisec.mshield.design.MyBottomView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:changeDrawable="true"
        app:changeTextColor="true"
        app:textSelectedColor="@color/colorPrimary"
        app:textUnSelectedColor="@color/grey_first"
        app:bottomTextSize="@dimen/sp_6"
        app:textFirst="@string/first_page"
        app:textSecond="@string/match"
        app:textThird="@string/data"
        app:textFourth="@string/circle"
        app:textFifth="@string/my"
        app:bottomNum="5"
        app:imageUnSelectedFirst="@drawable/consult"
        app:imageUnSelectedSecond="@drawable/certificate_false"
        app:imageUnSelectedThird="@drawable/service_false"
        app:imageUnSelectedFourth="@drawable/notice_tab_flase_jpg"
        app:imageSelectedFirst="@drawable/sonsult_true"
        app:imageSelectedSecond="@drawable/certificate_true"
        app:imageSelectedThird="@drawable/service_true"
        app:imageSelectedFourth="@drawable/notice_tab_true_jpg"
        app:imageSelectedFifth="@drawable/my_true"
        app:imageUnSelectedFifth="@drawable/my_false"
        android:layout_alignParentBottom="true"/>
</LinearLayout>