<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:text="@string/mine_safe_pin"
        android:textColor="@color/font_gray"
        android:textSize="@dimen/h4"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/safe_pin_change_tv"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:drawableRight="@mipmap/ico_arrow_r"
            android:text="@string/mine_safe_pin_change"
            android:textColor="@color/font_black"
            android:textSize="@dimen/h5"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/mine_safe_type"
        android:textColor="@color/font_gray"
        android:textSize="@dimen/h4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mine_safe_lock_rl"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/mine_safe_lock"
                android:textColor="@color/font_black"
                android:textSize="@dimen/h4" />

            <Button
                android:id="@+id/lock_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/switch_off" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_safe_finger_rl"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/mine_safe_finger"
                android:textColor="@color/font_black"
                android:textSize="@dimen/h4" />

            <Button
                android:id="@+id/finger_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/switch_off" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/mine_safe_account"
        android:textColor="@color/font_gray"
        android:textSize="@dimen/h4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mobile_number"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/font_black"
                android:textSize="@dimen/h4" />

            <Button
                android:id="@+id/safe_phone_change_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:text="@string/safe_change_phone"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/h5" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
